# Getaway

./: .env  .gitignore  Cargo.toml  README.md  getaway.ps1
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/components/: About.jsx  Docs.jsx  Footer.jsx  Header.jsx  Logs.jsx
frontend/src/: App.jsx  index.css  main.jsx
gateway/: Cargo.toml
gateway/src/: config.rs  error_handler.rs  main.rs  services.rs  structs.rs
policy/: Cargo.toml  logs.txt  policies.json
policy/src/: lib.rs  main.rs  policies.json
