[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.10.1"
warp = "0.4.2"
http = "1.3.1"
lazy_static = "1.5.0"
serde_json = "1.0.143"
policy = { path = "../policy" }
dotenvy = "0.15"
chrono = "0.4.42"