[package]
name = "policy"
version = "0.1.0"
edition = "2024"

[lib]
name = "policy"
path = "src/lib.rs"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.225", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.145"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.10.1"
warp = "0.4.2"
http = "1.3.1"
lazy_static = "1.5.0"
url = "2.5.7"